--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/experience.css">
     <link rel="stylesheet" href="CSS/projects.css">
-    <link rel="icon" href="assets/fav.ico" type="image/x-icon">
+    <link rel="icon" href="CSS/assets/fav.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
