--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/experience.css">
     <link rel="stylesheet" href="CSS/projects.css">
-    <link rel="icon" href="CSS/assets/fav.ico" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/honors.css">
+    <link rel="icon" href="assets/fav.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -51,7 +52,7 @@
         <section id="about" class="about-section">
             <div class="about-grid">
                 <div>
-                    <h2>All About Me</h2>
+                    <h2>About Me</h2>
                     <p>
                         Hey, my name is Marry and I'm a 17 year old developer from Detroit. I've been interested 
                         in technology for as long as I can remember. I've taught myself programming since middle
@@ -86,7 +87,7 @@
 
         <!-- Experiences-->
         <section id="experiences" class="experiences-section">
-            <h1>Experiences </h1>
+            <h1>Experience</h1>
             <div class="experience-grid">
                 <div class="experience-card">
                     <h2>MIT Introduction to Technology, Engineering, & Science Scholar</h2>
@@ -141,7 +142,7 @@
 
         <!-- Projects Section -->
         <section id="projects" class="projects-section">
-            <h1>My Projects</h1>
+            <h1>Projects</h1>
             <div class="projects-grid">
                 <div class="project-card">
                     <h2>Star Detection Algorithm</h2>
@@ -193,8 +194,35 @@
                     </p>
                 </div>
             </div>
-            
         </section>
+        <!-- updates for github + site-->
+        <!-- adding an award section-->
+         <section id="awards-honors" class="honors-section">
+            <h1>Honors & Awards</h1>
+            <div class="honors-grid">
+                <div class="honors-card">
+                    <h2>NCWIT Aspirations in Computing National Honorable Mention</h2>
+                    <p class="honors-duration">Jan 2024</p>
+                    <p>
+                        Top 360 awarded out of 3300 other girls in computing. Recognized nationally for achievements and aspirations in computer science.
+                    </p>
+                </div>
+                <div class="honors-card">
+                    <h2>National, Regional, & State SMASH App Pitch Competitions</h2>
+                    <p class="honors-duration">July 2023</p>
+                    <p>
+                        Won 4th place nationals, 1st place regionals and state for environmentalism app pitch.
+                    </p>
+                </div>
+                <div class="honors-card">
+                    <h2>NAGC Dr. Martin D. Jenkins Award</h2>
+                    <p class="honors-duration">Sep 2024</p>
+                    <p>
+                        Awarded to top ~10% of applicants for extracurricular and academic achievements.
+                    </p>
+                </div>
+            </div>
+         </section>
     </div>
     <footer>
         <p>&copy; 2024 Marry Kassa. All Rights Reserved.</p>
