--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
             <h1>Marry Kassa</h1>
     
             <p class="home-description">
-                <a href="https://www.linkedin.com/in/marry-kassa/" target="_blank">LinkedIn</a> | <a href="https://github.com/marsjpeg" target="_blank">GitHub</a> | <a href="https://docs.google.com/document/d/1YQD-YlJ15xFAeVffor9Whi2ZI6zM3XaJDTWWlnD5laI/edit?usp=sharing" target="_blank">Resume</a> | <a href="mailto:marry@mit.edu" target="_blank">Email</a>
+                <a href="https://www.linkedin.com/in/marry-kassa/" target="_blank"><img src="CSS/assets/linkedin.png" alt="LinkedIn" width="40"></a>   <a href="https://github.com/marsjpeg" target="_blank"><img src="CSS/assets/githublogo.png" alt="Github" width="30"></a>   <a href="mailto:marrykassa0@gmail.com" target="_blank"><img src="CSS/assets/email.png" alt="LinkedIn" width="40"></a>
             </p>
             <br>
             <div class="home-description">
                 <p>
                     <br>
+                    <i>
+                    Made in scratch with HTML, CSS
+                    </i>
                     <br>
-                    <b>
-                    Software Developer, Machine Learning Researcher, Web Developer
-                    </b>
-                    <br>
-                    <i>(Website made from scratch using HTML & CSS)</i>
                 </p>
             </div>
         </section>
@@ -88,8 +86,8 @@
         <!-- Experiences-->
         <section id="experiences" class="experiences-section">
             <h1>Experience</h1>
-            <div class="experience-grid">
-                <div class="experience-card">
+            <div class="timeline">
+                <div class="experience">
                     <h2>MIT Introduction to Technology, Engineering, & Science Scholar</h2>
                     <h3>Massachusetts Institute of Technology</h3>
                     <p class="experience-duration">June 2024 - Dec 2024</p>
@@ -101,8 +99,8 @@
                         </ul>
                     </p>
                 </div>
-                <div class="experience-card">
-                    <h2>Scientific Researcher</h2>
+                <div class="experience">
+                    <h2>Machine Learning Researcher</h2>
                     <h3>Pioneer International Research Institute</h3>
                     <p class="experience-duration">June 2024 - Sep 2024</p>
                     <p>
@@ -114,8 +112,8 @@
                         </ul>
                     </p>
                 </div>
-                <div class="experience-card">
-                    <h2>Web Developer Intern</h2>
+                <div class="experience">
+                    <h2>Web Developer Intern & Youth Advisory Founder</h2>
                     <h3>The Next IT Girl Nonprofit</h3>
                     <p class="experience-duration">Feb 2024 - Present</p>
                     <p>
@@ -126,7 +124,7 @@
                         </ul>
                     </p>
                 </div>
-                <div class="experience-card">
+                <div class="experience">
                     <h2>Web Developer & Webmaster</h2>
                     <h3>Shadow Your Future Nonprofit</h3>
                     <p class="experience-duration">Jan 2024 - Present</p>
@@ -148,12 +146,12 @@
                     <h2>Star Detection Algorithm</h2>
                     <p>
                         A novel approach to star detection in noisy astronomical
-                        images, built with Python, OpenCV, and Tensorflow. Consists of a sself-trained trained CNN model 
-                        that distinguishes between stars and non-stars based on Hough Circle 
+                        images, built with Python, OpenCV, and Tensorflow. Consists of a CNN model 
+                        that distinguishes celestial objects based on Hough Circle 
                         Transform.
                         <br>
                         <br>
-                        <a href="https://github.com/marsjpeg/Star-Detection-Algorithm" target="_blank">Github Repository</a>
+                        <a href="https://github.com/marsjpeg/Star-Detection-Algorithm" target="_blank"><img src="CSS/assets/githublogo.png" alt="github repo" width="40"></a>
                     </p>
                 </div>
                 <div class="project-card">
@@ -164,7 +162,8 @@
                         NASA, that provide up to date facts in embedded replies.
                         <br>
                         <br>
-                        <a href="https://github.com/marsjpeg/ProjectKepler" target="_blank">Github Repository</a>
+                        <br>
+                        <a href="https://github.com/marsjpeg/ProjectKepler" target="_blank"><img src="CSS/assets/githublogo.png" alt="github repo" width="40"></a>
                     </p>
                 </div>
                 <div class="project-card">
@@ -181,7 +180,7 @@
                         Beautiful Math (discrete math) class.
                         <br>
                         <br>
-                        <a href="https://github.com/marsjpeg/ProjectKepler" target="_blank">Github Repository</a>
+                        <a href="https://github.com/marsjpeg/Coin-Rotational-Paradox-Animations" target="_blank"><img src="CSS/assets/githublogo.png" alt="github repo" width="40"></a>
                     </p>
                 </div>
                 <div class="project-card">
@@ -201,14 +200,28 @@
             <h1>Honors & Awards</h1>
             <div class="honors-grid">
                 <div class="honors-card">
-                    <h2>NCWIT Aspirations in Computing National Honorable Mention</h2>
+                    <h2>2025 NCWIT Aspirations in Computing National Winner</h2>
                     <p class="honors-duration">Jan 2024</p>
                     <p>
-                        Top 360 awarded out of 3300 other girls in computing. Recognized nationally for achievements and aspirations in computer science.
+                        Top 40 awarded out of 3700 other girls in computing (top 1%). Invited to all-expenses-paid trips to award ceremony in Charlotte, NC, and Jane Street headquarters in New York City, NY.
                     </p>
                 </div>
                 <div class="honors-card">
-                    <h2>National, Regional, & State SMASH App Pitch Competitions</h2>
+                    <h2>2025 NCWIT Aspirations in Computing Michigan Affiliate Winner</h2>
+                    <p class="honors-duration">Feb 2025</p>
+                    <p>
+                        One of the few Michigan Winners awarded out of hundreds of applicants, recognized for accomplishments in computing, programming, and technology.
+                    </p>
+                </div>
+                <div class="honors-card">
+                    <h2>2024 NCWIT Aspirations in Computing National Honorable Mention</h2>
+                    <p class="honors-duration">Jan 2024</p>
+                    <p>
+                        Top 360 awarded out of 3300 other girls in computing (top 10%). Recognized nationally for achievements and aspirations in computer science.
+                    </p>
+                </div>
+                <div class="honors-card">
+                    <h2>SMASH National, Regional, & State  App Pitch Competitions</h2>
                     <p class="honors-duration">July 2023</p>
                     <p>
                         Won 4th place nationals, 1st place regionals and state for environmentalism app pitch.
