--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="#about">About</a>
                     <a href="#experiences">Experiences</a>
                     <a href="#projects">Projects</a>
+                    <a href="#awards-honors">Honors/Awards</a>
                 </div>
             </div>
         </nav>
