--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1>Experience</h1>
             <div class="timeline">
                 <div class="experience">
-                    <h2>MIT Introduction to Technology, Engineering, & Science Scholar</h2>
+                    <h2>MITES Scholar</h2>
                     <h3>Massachusetts Institute of Technology</h3>
                     <p class="experience-duration">June 2024 - Dec 2024</p>
                     <p>
@@ -202,7 +202,7 @@
             <div class="honors-grid">
                 <div class="honors-card">
                     <h2>2025 NCWIT Aspirations in Computing National Winner</h2>
-                    <p class="honors-duration">Jan 2024</p>
+                    <p class="honors-duration">Dec 2024</p>
                     <p>
                         Top 40 awarded out of 3700 other girls in computing (top 1%). Invited to all-expenses-paid trips to award ceremony in Charlotte, NC, and Jane Street headquarters in New York City, NY.
                     </p>
