--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         Hey, my name is Marry and I'm a 17 year old developer from Detroit. I've been interested 
                         in technology for as long as I can remember. I've taught myself programming since middle
                         school, taken 3 college level CS classes, conducted undergraduate level research, and more.
-                        My skills range from machine learning to full-stack development to hardware, and I plan on 
-                        specializing in software engineering after gaining a computer science degree.
+                        My skills range from machine learning to full-stack development to hardware. I plan on 
+                        specializing in software engineering after gaining a computer science degree at Yale University!
                     </p>
                     
                 </div>
@@ -76,6 +76,7 @@
                         <li>TypeScript</li>
                         <li>Dart</li>
                         <li>Flutter</li>
+                        <li>Swift</li>
                         <li>JSON</li>
                         <li>Markdown</li>
                         <li>Bash</li>
@@ -88,6 +89,16 @@
         <section id="experiences" class="experiences-section">
             <h1>Experience</h1>
             <div class="timeline">
+                <div class="experience">
+                    <h2>Software Development Engineer Intern</h2>
+                    <h3>Amazon</h3>
+                    <p class="experience-duration">May 2025 - Aug 2025</p>
+                    <p>
+                        <ul>
+                            <li>Won Amazon Future Engineer Scholarship. Guaranteed SWE internship.</li>
+                        </ul>
+                    </p>
+                </div>
                 <div class="experience">
                     <h2>MITES Scholar</h2>
                     <h3>Massachusetts Institute of Technology</h3>
