--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <div>
                     <h2>About Me</h2>
                     <p>
-                        Hey, my name is Marry and I'm a 17 year old developer from Detroit. I've been interested 
+                        Hey, my name is Marry and I'm an 8year old developer from Detroit. I've been interested 
                         in technology for as long as I can remember. I've taught myself programming since middle
-                        school, taken 3 college level CS classes, conducted undergraduate level research, and more.
-                        My skills range from machine learning to full-stack development to hardware. I plan on 
-                        specializing in software engineering after gaining a computer science degree at Yale University!
+                        school, taken 4 college level CS classes, conducted undergraduate level research, and more.
+                        My skills range from machine learning to full-stack development and hardware. I plan on 
+                        specializing in machine learning engineering after gaining my computer science BS/MS at Yale University!
                     </p>
                     
                 </div>
@@ -99,6 +99,16 @@
                         </ul>
                     </p>
                 </div>
+                 <div class="experience">
+                    <h2>Software Developer</h2>
+                    <h3>Yale College Dean's Office</h3>
+                    <p class="experience-duration">Sep 2025 - Present</p>
+                    <p>
+                        <ul>
+                            <li>Starting up a new student position at Yale! :)</li>
+                        </ul>
+                    </p>
+                </div>
                 <div class="experience">
                     <h2>MITES Scholar</h2>
                     <h3>Massachusetts Institute of Technology</h3>
@@ -127,7 +137,7 @@
                 <div class="experience">
                     <h2>Web Developer Intern & Youth Advisory Founder</h2>
                     <h3>The Next IT Girl Nonprofit</h3>
-                    <p class="experience-duration">Feb 2024 - Present</p>
+                    <p class="experience-duration">Feb 2024 - June 2025</p>
                     <p>
                         <ul>
                             <li>Helped prototype, manage, and design new website updates using Wordpress with HTML/CSS and beaver builder</li>
@@ -139,7 +149,7 @@
                 <div class="experience">
                     <h2>Web Developer & Webmaster</h2>
                     <h3>Shadow Your Future Nonprofit</h3>
-                    <p class="experience-duration">Jan 2024 - Present</p>
+                    <p class="experience-duration">Jan 2024 - June 2025</p>
                     <p>
                         <ul>
                             <li>Created website from scratch using Wix & HTML embeds, managed site solo</li>
@@ -254,3 +264,4 @@
     </footer>
 </body>
 </html>
+
